# Mighty-DOOM-Custom-Admin-Server

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml  start_admin_all_interfaces.bat
data/: README.md  game-data.example.json
docs/: EVENTS_INTEGRATION.md  INBOX_INTEGRATION.md
src/mightydoom_admin/: __init__.py  __main__.py  server.py
