[project]
name = "mightydoom-admin-server"
version = "0.17.0"
description = "Private Flask admin dashboard for a local Mighty DOOM SQLite server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask==3.0.3",
    "bcrypt==4.1.3",
]

[project.scripts]
mightydoom-admin = "mightydoom_admin.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
